--- a/_config.yml
+++ b/_config.yml
@@ -23,12 +23,12 @@ footer-links:
   flickr:
   github: aconnolly2
   instagram: ghotifrye
-  linkedin: https://www.linkedin.com/in/augustconnolly/
+  linkedin: augustconnolly
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: ghotifrye
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: https://www.youtube.com/channel/UC8M8R5RXbJLjbb-fp6CfP6A
+  youtube: channel/UC8M8R5RXbJLjbb-fp6CfP6A
   googleplus: # anything in your profile username that comes after plus.google.com/
 
 
