--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: August Connolly
 description: Game Developer, IT, and Software
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: blob:https://xyzzystudios-my.sharepoint.com/9cc9d3f8-8a50-40b7-b511-6b30a5c42a91
+avatar: https://xyzzystudios-my.sharepoint.com/9cc9d3f8-8a50-40b7-b511-6b30a5c42a91
 
 #
 # Flags below are optional
