Try this again, with some extra formatting.

--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ name: August Connolly
 # Short bio or description (displayed in the header)
 description: Game Developer, IT, and Software
 
-# URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://xyzzystudios-my.sharepoint.com/9cc9d3f8-8a50-40b7-b511-6b30a5c42a91
+# URL of your avatar or profile pic (you could use your GitHub profile pic, or your Twitch pic!)
+avatar: https://static-cdn.jtvnw.net/jtv_user_pictures/865722c4-5bf7-435d-9221-2965ef3b3740-profile_image-300x300.png
 
 #
 # Flags below are optional
