Added Steam, Discord, and Twitch icons to the link bar. Does it work?

--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,13 @@ footer-links:
   instagram: ghotifrye
   linkedin: augustconnolly
   pinterest:
-  rss: # just type anything here for a working RSS icon
   twitter: ghotifrye
+  discord: 212000792721227776
+  steam: ghotifrye
+  twitch: ghotifrye
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: channel/UC8M8R5RXbJLjbb-fp6CfP6A
+  rss: ghotifrye
   googleplus: # anything in your profile username that comes after plus.google.com/
 
 
