Added itch.io and GGJ to the icons, because I'm a pro at it now, and why not?

--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,8 @@ footer-links:
   facebook: ghotifrye
   flickr:
   github: aconnolly2
+  itchio: ghotifrye
+  ggj: ghotifrye
   instagram: ghotifrye
   linkedin: augustconnolly
   pinterest:
